GNOME Bugzilla – Bug 696811
UI strings do not comply with the HIG
Last modified: 2013-06-04 16:10:02 UTC
Created attachment 240081 [details] [review] patch While updating the user help for the Power panel, I noticed that the list item strings had inconsistent capitalisation and one used Latin. I have updated the capitalisation to comply with the HIG and changed Latin to English. Patch attached.
Review of attachment 240081 [details] [review]: The rest looks fine. ::: panels/power/cc-power-panel.c @@ +1547,3 @@ gtk_box_pack_start (GTK_BOX (box2), label, TRUE, TRUE, 0); + w = gtk_label_new (_("Turns off mobile broadband (3G, 4G, WiMax, and so on) devices")); "etc." isn't Latin, it's in the English language.
Created attachment 240090 [details] [review] patch with only capitalisation changes I agree that it is in the vernacular, but it is still a Latin term ("etc." is an abbreviation of "et cetera"). When it is used in English, it is often typeset in italics because it is not actually English. Another thing to consider is that it can be confusing to non-native speakers (and, to be honest, quite a few native speakers too). Also, Latin is something that the documentation team also try to avoid, and it would be great if the UI was consistent with the docs style[1] on the point, given that this is not covered in the HIG. I cannot see any benefit to using "etc." over "and so on" while I can see some benefits to the other way around. It would be awesome if you could reconsider the point… but just in case, another patch attached without the change. [1] https://developer.gnome.org/gdp-style-guide/stable/gdp-style-guide.html#grammar
(In reply to comment #2) <snip> > I cannot see any benefit to using "etc." over "and so on" while I can see some > benefits to the other way around. "and so on" makes it look sloppy and it is English. > It would be awesome if you could reconsider > the point… but just in case, another patch attached without the change. I find the change nonsensical (you argue it's not English, while it is, and that seems to be the only reason for the change), so no, this part won't get applied. > [1] > https://developer.gnome.org/gdp-style-guide/stable/gdp-style-guide.html#grammar
Thanks for the patch!