power: Update UI strings to follow the HIG

Update the list items to use only sentence capitalisation to comply with
the Human Interface Guidelines instead of a selection of three different
types of capilatisation.

https://bugzilla.gnome.org/show_bug.cgi?id=696811